--- a/index.html
+++ b/index.html
@@ -8,67 +8,81 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-  
+
   <header class="container">
-  <div class="row">
-        <h1 class="col-sm-4">Inigo Mato</h1>
-        <nav class="col-sm-8 text-right">
-          <p>cv</p>
-         <p>contact</p>
-        </nav>
-  </div>
+    <div class="row">
+      <h1 class="col-sm-4">Inigo Mato</h1>
+      <nav class="col-sm-8 text-right">
+        <p>cv</p>
+        <p>contact</p>
+      </nav>
+    </div>
   </header>
   
   <section class="jumbotron">
-  <div class="container">
-    <div class="row text-center">
+    <div class="container">
+      <div class="row text-center">
 
         <h2>Homemade Goods</h2>
-      <h3>This Year's Best</h3>
-      <a class="btn btn-primary" href="#" role="button">See all</a>
-    
+        <h3>This Year's Best</h3>
+        <a class="btn btn-primary" href="#" role="button">See all</a>
+
+      </div>
     </div>
-  </div>
-</section>
+  </section>
   
   <section class="container">
-<div class="row">
-    <figure class="col-sm-6">
-<p>kitchen</p>
-      <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>
-    </figure>
-    <figure class="col-sm-6">
-<p>kitchen</p>
-      <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>    </figure>
-  </div>
-  <div class="row">
-    <figure class="col-sm-6">
-<p>kitchen</p>
-      <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>    </figure>
-    <figure class="col-sm-6">
-<p>kitchen</p>
-      <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>    </figure>
-  </div>
-  </section>
-    
-  <footer class="container">
-<div class="row">
-   <p class="col-sm-4">&copy; 2016 Inigo Mato
-</p>
-    <ul class="col-sm-8">
-     <li class="col-sm-1"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg"></li>
- <li class="col-sm-1">
-  <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg">
-</li>
- <li class="col-sm-1">
-  <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg">
-</li>
- <li class="col-md-1">
-  <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg">
-</li>
-  </ul>
+    <div class="row">
+      <figure class="col-sm-6">
+        <p>Bakeware</p>
+        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>
+      </figure>
+      <figure class="col-sm-6">
+        <p>Cookware</p>
+        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>    
+      </figure>
     </div>
-  </footer>
-  
+    <div class="row">
+      <figure class="col-sm-6">
+        <p>Kettles</p>
+        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>    
+      </figure>
+      <figure class="col-sm-6">
+        <p>kitchen Tools</p>
+        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>    
+      </figure>
+    </div>
+    <div class="row">
+      <figure class="col-sm-6">
+        <p>Baking Dishes</p>
+        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>
+      </figure>
+      <figure class="col-sm-6">
+        <p>Casserole Dishes</p>
+        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>    
+      </figure>
+    </div>
+  </section>
+
+  <footer class="container">
+    <div class="row">
+     <p class="col-sm-4">&copy; 2016 Inigo Mato</p>
+     <ul class="col-sm-8">
+      <li class="col-sm-1">
+        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg">
+      </li>
+      <li class="col-sm-1">
+        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg">
+      </li>
+      <li class="col-sm-1">
+        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg">
+      </li>
+      <li class="col-md-1">
+        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg">
+      </li>
+    </ul>
+  </div>
+</footer>
+
 </body>
 </html>
