--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <h2>Homemade Goods</h2>
         <h3>This Year's Best</h3>
-        <a class="btn btn-primary" href="#" role="button">See all</a>
+        <a class="btn btn-primary" href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:11052681&amp;lo=kitchen" role="button">See all</a>
 
       </div>
     </div>
@@ -35,31 +35,37 @@
     <div class="row">
       <figure class="col-sm-6">
         <p>Bakeware</p>
-        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>
+        <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:10708921&amp;lo=kitchen">
+        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_bakeware.jpg"/>
       </figure>
       <figure class="col-sm-6">
         <p>Cookware</p>
-        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>    
+        <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:3147471&amp;lo=kitchen">
+        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_cookware.jpg"/>    
       </figure>
     </div>
     <div class="row">
       <figure class="col-sm-6">
         <p>Kettles</p>
-        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>    
+        <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:3538307031&amp;lo=kitchen">
+        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_kettles.jpg"/>    
       </figure>
       <figure class="col-sm-6">
         <p>kitchen Tools</p>
-        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>    
+        <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:3147491&amp;lo=kitchen">
+        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_kitchentools.jpg"/>    
       </figure>
     </div>
     <div class="row">
       <figure class="col-sm-6">
-        <p>Baking Dishes</p>
-        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>
+        <p>Tabletop</p>
+        <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:11711191&amp;lo=kitchen">
+        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_tabletop.jpg"/>
       </figure>
       <figure class="col-sm-6">
         <p>Casserole Dishes</p>
-        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>    
+        <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:11715821&amp;lo=kitchen">
+        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_dutchovens.jpg"/>    
       </figure>
     </div>
   </section>
