--- a/index.html
+++ b/index.html
@@ -36,43 +36,43 @@
       <figure class="col-sm-6">
         <p>Bakeware</p>
         <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:10708921&amp;lo=kitchen">
-        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_bakeware.jpg"/>
+        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_bakeware.jpg"/></a>
       </figure>
       <figure class="col-sm-6">
         <p>Cookware</p>
         <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:3147471&amp;lo=kitchen">
-        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_cookware.jpg"/>    
+        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_cookware.jpg"/></a> 
       </figure>
     </div>
     <div class="row">
       <figure class="col-sm-6">
         <p>Kettles</p>
         <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:3538307031&amp;lo=kitchen">
-        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_kettles.jpg"/>    
+        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_kettles.jpg"/></a>    
       </figure>
       <figure class="col-sm-6">
         <p>kitchen Tools</p>
         <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:3147491&amp;lo=kitchen">
-        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_kitchentools.jpg"/>    
+        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_kitchentools.jpg"/></a>    
       </figure>
     </div>
     <div class="row">
       <figure class="col-sm-6">
         <p>Tabletop</p>
         <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:11711191&amp;lo=kitchen">
-        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_tabletop.jpg"/>
+        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_tabletop.jpg"/></a>
       </figure>
       <figure class="col-sm-6">
         <p>Casserole Dishes</p>
         <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:11715821&amp;lo=kitchen">
-        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_dutchovens.jpg"/>    
+        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_dutchovens.jpg"/></a>    
       </figure>
     </div>
   </section>
 
   <footer class="container">
     <div class="row">
-     <p class="col-sm-4">&copy; 2016 Inigo Mato</p>
+     <p class="col-sm-4">&copy; 2017 Inigo Mato</p>
      <ul class="col-sm-8">
       <li class="col-sm-1">
         <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg">
