--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <h2>Homemade Goods</h2>
         <h3>This Year's Best</h3>
-        <a class="btn btn-primary" href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:11052681&amp;lo=kitchen" role="button">See all</a>
+        <a class="btn btn-primary" href="https://www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:11052681&amp;lo=kitchen" role="button">See all</a>
 
       </div>
     </div>
@@ -34,38 +34,44 @@
   <section class="container">
     <div class="row">
       <figure class="col-sm-6">
-        <p>Bakeware</p>
-        <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:10708921&amp;lo=kitchen">
-        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_bakeware.jpg"/></a>
+        <a href="https://www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:10708921&amp;lo=kitchen">
+          <p>Bakeware</p>
+          <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_bakeware.jpg"/>
+        </a>
       </figure>
       <figure class="col-sm-6">
-        <p>Cookware</p>
-        <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:3147471&amp;lo=kitchen">
-        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_cookware.jpg"/></a> 
-      </figure>
-    </div>
-    <div class="row">
-      <figure class="col-sm-6">
-        <p>Kettles</p>
-        <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:3538307031&amp;lo=kitchen">
-        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_kettles.jpg"/></a>    
-      </figure>
-      <figure class="col-sm-6">
-        <p>kitchen Tools</p>
-        <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:3147491&amp;lo=kitchen">
-        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_kitchentools.jpg"/></a>    
+        <a href="https://www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:3147471&amp;lo=kitchen">
+          <p>Cookware</p>
+          <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_cookware.jpg"/>
+        </a> 
       </figure>
     </div>
     <div class="row">
       <figure class="col-sm-6">
-        <p>Tabletop</p>
-        <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:11711191&amp;lo=kitchen">
-        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_tabletop.jpg"/></a>
+        <a href="https://www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:3538307031&amp;lo=kitchen">
+          <p>Kettles</p>
+          <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_kettles.jpg"/>
+        </a>    
       </figure>
       <figure class="col-sm-6">
-        <p>Casserole Dishes</p>
-        <a href="www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:11715821&amp;lo=kitchen">
-        <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_dutchovens.jpg"/></a>    
+        <a href="https://www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:3147491&amp;lo=kitchen">
+          <p>kitchen Tools</p>
+          <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_kitchentools.jpg"/>
+        </a>    
+      </figure>
+    </div>
+    <div class="row">
+      <figure class="col-sm-6">
+        <a href="https://www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:11711191&amp;lo=kitchen">
+          <p>Tabletop</p>
+          <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_tabletop.jpg"/>
+        </a>
+      </figure>
+      <figure class="col-sm-6">
+        <a href="https://www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:11715821&amp;lo=kitchen">
+          <p>Casserole Dishes</p>
+          <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_dutchovens.jpg"/>
+        </a>    
       </figure>
     </div>
   </section>
