--- a/index.html
+++ b/index.html
@@ -82,16 +82,24 @@
      <p class="col-sm-4">&copy; 2017 Inigo Mato</p>
      <ul class="col-sm-8">
       <li class="col-sm-1">
-        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg">
+        <a href="https://twitter.com/LeCreusetUK">
+          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg">
+        </a>
       </li>
       <li class="col-sm-1">
-        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg">
+        <a href="https://www.facebook.com/lecreusetUK/">
+          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg">
+        </a>
       </li>
       <li class="col-sm-1">
-        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg">
+        <a href="https://www.instagram.com/lecreusetuk/">
+          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg">
+        </a>
       </li>
       <li class="col-md-1">
-        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg">
+        </a href="https://uk.pinterest.com/lecreusetuk/">
+          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg">
+        </a>
       </li>
     </ul>
   </div>
