--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </a>
       </li>
       <li class="col-md-1">
-        </a href="https://uk.pinterest.com/lecreusetuk/">
+        <a href="https://uk.pinterest.com/lecreusetuk/">
           <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg">
         </a>
       </li>
