--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </li>
       <li class="col-md-1">
         <a href="https://uk.pinterest.com/lecreusetuk/">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg">
+          <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/ic_pinterest.jpg">
         </a>
       </li>
     </ul>
