--- a/index.html
+++ b/index.html
@@ -1,109 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Inigo Mato</title>
-  <meta charset="utf-8"/>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<body>
-
-  <header class="container">
-    <div class="row">
-      <h1 class="col-sm-8">Le Creuset Recommendations</h1>
-      <nav class="col-sm-4 text-right">
-        <!--
-        <p>cv</p>
-        <p>contact</p>
-        -->
-      </nav>
-    </div>
-  </header>
-  
-  <section class="jumbotron">
-    <div class="container">
-      <div class="row text-center">
-        <h2>Cookware, Bakeware, Pots, Pans, Kitchen &amp; Bar Tools</h2>
-        <h3>Le Creuset: the premium French cookware manufacturer best known for its colorfully-enameled cast-iron cookware "French ovens", also known as "casseroles" or "Dutch ovens"</h3>
-        <a class="btn btn-primary" href="https://www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:11052681&amp;lo=kitchen" role="button">See all</a>
-
-      </div>
-    </div>
-  </section>
-  
-  <section class="container">
-    <div class="row">
-      <figure class="col-sm-6">
-        <a href="https://www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:10708921&amp;lo=kitchen">
-          <p>Bakeware</p>
-          <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_bakeware.jpg"/>
-        </a>
-      </figure>
-      <figure class="col-sm-6">
-        <a href="https://www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:3147471&amp;lo=kitchen">
-          <p>Cookware</p>
-          <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_cookware.jpg"/>
-        </a> 
-      </figure>
-    </div>
-    <div class="row">
-      <figure class="col-sm-6">
-        <a href="https://www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:3538307031&amp;lo=kitchen">
-          <p>Kettles</p>
-          <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_kettles.jpg"/>
-        </a>    
-      </figure>
-      <figure class="col-sm-6">
-        <a href="https://www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:3147491&amp;lo=kitchen">
-          <p>kitchen Tools</p>
-          <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_kitchentools.jpg"/>
-        </a>    
-      </figure>
-    </div>
-    <div class="row">
-      <figure class="col-sm-6">
-        <a href="https://www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:11711191&amp;lo=kitchen">
-          <p>Tabletop</p>
-          <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_tabletop.jpg"/>
-        </a>
-      </figure>
-      <figure class="col-sm-6">
-        <a href="https://www.amazon.co.uk/s/?rh=p_89:Le+Creuset,n:11715821&amp;lo=kitchen">
-          <p>Casserole Dishes</p>
-          <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_dutchovens.jpg"/>
-        </a>    
-      </figure>
-    </div>
-  </section>
-
-  <footer class="container">
-    <div class="row">
-     <p class="col-sm-4">&copy; 2017 Inigo Mato</p>
-     <ul class="col-sm-8">
-      <li class="col-sm-1">
-        <a href="https://twitter.com/LeCreusetUK">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg">
-        </a>
-      </li>
-      <li class="col-sm-1">
-        <a href="https://www.facebook.com/lecreusetUK/">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg">
-        </a>
-      </li>
-      <li class="col-sm-1">
-        <a href="https://www.instagram.com/lecreusetuk/">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg">
-        </a>
-      </li>
-      <li class="col-md-1">
-        <a href="https://uk.pinterest.com/lecreusetuk/">
-          <img src="https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/ic_pinterest.jpg">
-        </a>
-      </li>
-    </ul>
-  </div>
-</footer>
-
-</body>
-</html>
+Hello World
